--- a/source/Billboards.Web/Billboards.Web.csproj
+++ b/source/Billboards.Web/Billboards.Web.csproj
@@ -410,6 +410,7 @@
     <Content Include="Scripts\lib\TrafficCop.min.js" />
     <Content Include="Web.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
