--- a/source/Billboards.Web/Web.config
+++ b/source/Billboards.Web/Web.config
@@ -11,10 +11,10 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Billboards.Web-20130221094401;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Billboards.Web-20130221094401.mdf" />-->
     
-    <!--<add name="Billboard" providerName="System.Data.SqlClient" connectionString="Data Source=PCHOME;Initial Catalog=Billboards; Integrated Security=SSPI" />-->
+    <add name="Billboard" providerName="System.Data.SqlClient" connectionString="Data Source=PCHOME;Initial Catalog=Billboards; Integrated Security=SSPI" />
     
    <!-- <add name="ApplicationServices" connectionString="data source=.\PCHOME;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
-    <add name="Billboard" providerName="System.Data.SqlClient" connectionString="Data Source=NBDIG26079\SQLEXPRESS;Initial Catalog=Billboards; Integrated Security=SSPI" />
+    <!--<add name="Billboard" providerName="System.Data.SqlClient" connectionString="Data Source=NBDIG26079\SQLEXPRESS;Initial Catalog=Billboards; Integrated Security=SSPI" />-->
     
   </connectionStrings>
   <appSettings>
